[tool.poetry]
name = "youtube-analytics-project"
version = "0.1.0"
description = ""
authors = ["tatyana lozovaya <tatka8632@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pytest = "^7.4.2"
requests = "^2.31.0"
google-api-python-client = "^2.102.0"
isodate = "^0.6.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
